--- a/dj/subway3.html
+++ b/dj/subway3.html
@@ -24,6 +24,7 @@
             width: 100%;
             height: 50%;
             overflow: hidden;
+            padding: 30px 0;
         }
 
         .utility{
@@ -41,7 +42,7 @@
 
         .logo{
             float: right;
-            background-image: url("./img/logo_w.png");
+            background-image: url("./img/subway/logo_w.png");
             background-repeat: no-repeat;
             background-position: center center;
             width: calc(100% / 3);
@@ -70,7 +71,7 @@
         }
 
         .mainImg{
-            background-image: url("./img/main_PC_1920x440_20200529050816305.jpg");
+            background-image: url("./img/subway/main_PC_1920x440_20200529050816305.jpg");
             background-repeat: no-repeat;
             background-position: center center;
             height: 400px;
@@ -115,7 +116,7 @@
             font-weight: bold;
             font-size: 20px;
             color: white;
-            background-image: url("./img/icon_map.png");
+            background-image: url("./img/subway/icon_map.png");
             background-repeat: no-repeat;
             background-position: 80px center;
         }
@@ -126,7 +127,7 @@
             font-weight: bold;
             font-size: 20px;
             color: white;
-            background-image: url("./img/icon_franchise.png");
+            background-image: url("./img/subway/icon_franchise.png");
             background-repeat: no-repeat;
             background-position: 55px center;
         }
@@ -144,7 +145,7 @@
         .bannerTop h2{
             display: inline;
             font-size: 50px;
-            background-image: url("./img/bul_tit.png");
+            background-image: url("./img/subway/bul_tit.png");
             background-repeat: no-repeat;
         }
         
@@ -185,7 +186,7 @@
         }
 
         section{
-            background-image: url("./img/bg_content.gif");
+            background-image: url("./img/subway/bg_content.gif");
             width: 100%;
             margin-top: 80px;
         }
@@ -207,7 +208,7 @@
             height: 300px;
             margin-left: 55px;
             float: left;
-            background-image: url("./img/bg_utilization.png");
+            background-image: url("./img/subway/bg_utilization.png");
             background-repeat: no-repeat;
             position: relative;
         }
@@ -238,7 +239,7 @@
             width: 825px;
             height: 300px;
             float: right;
-            background-image: url("./img/img_subway_history.png");
+            background-image: url("./img/subway/img_subway_history.png");
             background-repeat: no-repeat;
             position: relative;
         }
@@ -287,7 +288,7 @@
             position: absolute;
             left: 70px;
             top: 70px;
-            background-image: url("./img/bul_tit.png");
+            background-image: url("./img/subway/bul_tit.png");
             background-repeat: no-repeat;
             font-size: 30px;
             padding: 20px 0 0 20px;
@@ -317,7 +318,7 @@
         }
         .bottomRight{
             float:right;
-            background-image: url("./img/200616_하단배너제작건_20200616110752022.jpg");
+            background-image: url("./img/subway/200616_하단배너제작건_20200616110752022.jpg");
             background-repeat: no-repeat;
             height: 300px;
             width: 270px;
@@ -358,7 +359,7 @@
             width: 70px;
             height: 70px;
             /* background: blue; */
-			background-image: url("./img/icon_quickmenu.png");
+			background-image: url("./img/subway/icon_quickmenu.png");
 			background-repeat: no-repeat; 
         }
         .quickBox:nth-child(1) .quickBoxRight:after{background-position: 0 0;}
@@ -495,22 +496,22 @@
                 <div class="bannerBottom">
                     <div class="sandwiches">
                         <div class="sandwich">
-                            <img src="./img/sandwich_cl01.jpg" alt="">
+                            <img src="./img/subway/sandwich_cl01.jpg" alt="">
                             <div class="name">에그마요</div>
                             <div class="desc">친환경 인증 받은 농장에서 생산된 달걀과 고소한 마요네즈가 만나 더 부드러운 스테디셀러</div>
                         </div>
                         <div class="sandwich">
-                            <img src="./img/sandwich_cl02.jpg" alt="">
+                            <img src="./img/subway/sandwich_cl02.jpg" alt="">
                             <div class="name">이탈리안 비엠티</div>
                             <div class="desc">7시간 숙성된 페퍼로니,살라미 그리고 햄이 만들어내는 최상의 조화! 전세계가 사랑하는 No.1 베스트셀러!Biggest Meatiest Tastiest, It's B.M.T!</div>
                         </div>
                         <div class="sandwich">
-                            <img src="./img/sandwich_cl03.jpg" alt="">
+                            <img src="./img/subway/sandwich_cl03.jpg" alt="">
                             <div class="name">비엘티</div>
                             <div class="desc">오리지널 아메리칸 베이컨의 풍미와 바삭함 그대로~</div>
                         </div>
                         <div class="sandwich">
-                            <img src="./img/sandwich_cl04.jpg" alt="">
+                            <img src="./img/subway/sandwich_cl04.jpg" alt="">
                             <div class="name">미트볼</div>
                             <div class="desc">이탈리안 스타일의 비프 미트볼에 써브웨이만의 풍부한 향이 살아있는 마리나라소스를 듬뿍</div>
                         </div>
