--- a/dj/domino.html
+++ b/dj/domino.html
@@ -212,7 +212,7 @@
         }
 
         footer { 
-            padding: 30px 0;
+            padding-top: 30px;
         }
         .footerTop {
             width: 1200px;
